--- a/examples.css
+++ b/examples.css
@@ -1,5 +1,7 @@
 body {
-margin: 0px;
+font-size: 100%;
+box-sizing: border-box;
+margin-bottom: 50px;
 }
 
 h1, h2, h3, p {
@@ -7,15 +9,12 @@ margin-left: 10px;
 }
 
 
-/*Nav*/
+/*Nav for Pages*/
 
-body {
-font-size: 100%;
-box-sizing: border-box;
-margin-bottom: 50px;
-
+.nava {
+  margin-left: -10px;
 }
-	  
+
 .nava ul {
 list-style-type: none;
 margin: 0;
@@ -26,18 +25,18 @@ position: fixed;
 bottom: 0;
 width: 100%;
 }
-		  
+
 .nava ul li {
 float: left;
 border-right: 1px solid powderblue;
 }
-		  
+
 .nava ul li:last-child {
 border-right: none;
 }
-		  
-	 
-		  
+
+
+
 .nava ul li a {
 display: block;
 color: white;
@@ -45,12 +44,20 @@ text-align: center;
 padding: 12px 16px;
 text-decoration: none;
 }
-		  
+
+@media all and (max-width: 600px) {
+  .nava ul li a {
+    padding: 5px;
+  }
+  .nava ul li a.active {
+    display: none;
+  }
+}
+
 .nava ul li a:hover:not(.active) {
 background-color: navy;
 }
-		  
+
 .nava ul li a.active {
 background-color: navy;
 }
-
